--- a/app/src/main/res/layout/activity_calculadora.xml
+++ b/app/src/main/res/layout/activity_calculadora.xml
@@ -97,7 +97,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="15dp">
 
         <Button
             android:id="@+id/btnVoltar_Calculadora"
@@ -109,20 +110,11 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <ListView
+        android:id="@+id/listView_Calculadora"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-
-        <LinearLayout
-            android:id="@+id/layoutResultado_Calculadora"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-    </ScrollView>
+        android:textAlignment="center"/>
 
 </LinearLayout>
 
