--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="mainActivity_Buttons">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@color/bg_primary</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
+
     <style name="btnVoltar">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -31,8 +40,16 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:text">@string/limparDados</item>
-        <item name="android:background">@color/bg_primary</item>
+        <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="btnCadastrar" parent="TextAppearance.AppCompat.Widget.Button">
+        <item name="android:text">@string/cadastrar</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="paddingTipo2">
@@ -43,6 +60,14 @@
     <style name="marginTipo3">
         <item name="android:layout_marginTop">15dp</item>
         <item name="android:layout_marginBottom">15dp</item>
+    </style>
+
+    <style name="editText">
+        <item name="android:background">#fff</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:color">#666</item>
+        <item name="android:layout_margin">5dp</item>
     </style>
 
 </resources>
