--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,31 +17,34 @@
         <item name="android:layout_margin">5dp</item>
     </style>
 
-    <style name="btnVoltar">
+    <style name="btnVoltar" parent="TextAppearance.AppCompat.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:text">@string/voltar</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/red</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="btnCalcular">
+    <style name="btnCalcular" parent="TextAppearance.AppCompat.Widget.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:text">@string/calcular</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
-    <style name="btnLimparDados">
+    <style name="btnLimparDados" parent="TextAppearance.AppCompat.Widget.Button">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:text">@string/limparDados</item>
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="btnCadastrar" parent="TextAppearance.AppCompat.Widget.Button">
