--- a/app/src/main/res/layout/activity_paises.xml
+++ b/app/src/main/res/layout/activity_paises.xml
@@ -5,78 +5,80 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".view.Paises">
+    tools:context=".view.CadastroPais">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:text="@string/activityPaises"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="35sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/regiao"/>
+    <Spinner
+        android:id="@+id/spinner_Paises"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp" />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/pais" />
+
+    <EditText
+        android:id="@+id/editNome_Pais"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_pais" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/capital" />
+
+    <EditText
+        android:id="@+id/editCapital_Pais"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:hint="@string/hint_capital" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Spinner
-            android:id="@+id/spinner_Pais"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3" />
-
-        <ImageButton
-            android:id="@+id/imageButton_Pais"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@android:drawable/ic_menu_add" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/editNomeEstado_Pais"
-            style="@style/editText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:hint="@string/hint_estado" />
-
-        <EditText
-            android:id="@+id/editUf_Pais"
-            style="@style/editText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/hint_uf" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="15dp">
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/btnVoltar_Pais"
             style="@style/btnVoltar"
-            android:layout_weight="2"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp" />
+            android:layout_weight="3" />
 
         <Button
             android:id="@+id/btnCadastrar_Pais"
-            style="@style/btnCadastrar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:layout_margin="5dp"
-            android:layout_marginBottom="15dp"
-            android:text="@string/cadastrar" />
+            android:layout_weight="3"
+            android:background="@color/colorPrimary"
+            android:text="@string/cadastrar"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/btnLimparDados_Pais"
+            style="@style/btnLimparDados"
+            android:layout_weight="3" />
 
     </LinearLayout>
 
     <ListView
-        android:id="@+id/lvEstados_Pais"
+        android:id="@+id/lvPaises"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
