--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,11 @@
     <style name="mainActivity_Buttons">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
+        <item name="android:layout_weight">2</item>
         <item name="android:background">@color/bg_primary</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_margin">5dp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="btnVoltar" parent="TextAppearance.AppCompat.Button">
