--- a/app/src/main/res/layout/activity_paises.xml
+++ b/app/src/main/res/layout/activity_paises.xml
@@ -19,13 +19,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/regiao"/>
-    <Spinner
-        android:id="@+id/spinner_Paises"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp" />
+        android:text="@string/regiao" />
+        <Spinner
+            android:id="@+id/spinner_Paises"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" />
 
+<!--    <EditText-->
+<!--        android:id="@+id/editRegiao"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="@string/hint_regiao" />-->
 
     <TextView
         android:layout_width="match_parent"
